Motion Blur not working on GPU #32900

Closed
opened 2012-10-17 08:43:19 +02:00 by Vincent PARIS · 24 comments

Duplicates: #33058

%%%It crashes everytime, whatever the scene, , even in viewport, F12 and CTRL-F12 rendering...Works with CPU only

I tried to return with FACTORY Settings but sames result...

Tried with versions 51365, 51374 of TUNGERS and ALB3530 from graphicall. ( apparently buildbots versions doesn't include obj motion blur still... )

Tested on Win64, 2xGTX 580 driver 306.90 -> i tried with only 1 GTX580 active, but it still crash...

%%%

**Duplicates**: #33058 %%%It crashes everytime, whatever the scene, , even in viewport, F12 and CTRL-F12 rendering...Works with CPU only I tried to return with FACTORY Settings but sames result... Tried with versions 51365, 51374 of TUNGERS and ALB3530 from graphicall. ( apparently buildbots versions doesn't include obj motion blur still... ) Tested on Win64, 2xGTX 580 driver 306.90 -> i tried with only 1 GTX580 active, but it still crash... %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%for info, i just tried the same blender on another computer with 1 GTS450, and it seems to work... ( win 64 too, drivers 296, but the 296 drivers make cycles crash with one or two GTX580 )%%%

%%%for info, i just tried the same blender on another computer with 1 GTS450, and it seems to work... ( win 64 too, drivers 296, but the 296 drivers make cycles crash with one or two GTX580 )%%%
Author

%%%THird test: on win 64, with one GTX470 and drivers 306.23 : it crashes...%%%

%%%THird test: on win 64, with one GTX470 and drivers 306.23 : it crashes...%%%

%%%I am experiencing the exact same issure.

Windows 7 64bits
GTX 570+GTX580%%%

%%%I am experiencing the exact same issure. Windows 7 64bits GTX 570+GTX580%%%

%%%Does not crash on me under:

Ubuntu 12.04 64 bit
GTX 560 TI (304.51)
Blender r51376%%%

%%%Does not crash on me under: Ubuntu 12.04 64 bit GTX 560 TI (304.51) Blender r51376%%%
Author

%%%just installed the 51380 build of Mikkah, but still it crashes...%%%

%%%just installed the 51380 build of Mikkah, but still it crashes...%%%

%%%Same issue here. Crashes when trying to render with GPU in Viewport or F12 rendering. Tested on multiple Blenderversions 32 and 64bit.

Console output:

CUDA error: Unknown error in cuCtxSynchronize()
CUDA error: Unknown error in cuGraphicsMapResources(1, &pmem.cuPBOresource, 0)
CUDA error: Unknown error in cuGraphicsResourceGetMappedPointer(&buffer, &bytes,
pmem.cuPBOresource)
CUDA error: Unknown error in cuModuleGetFunction(&cuFilmConvert, cuModule, "kern
el_cuda_tonemap")
CUDA error: Unknown error in cuParamSetv(cuFilmConvert, offset, &d_rgba, sizeof(
d_rgba))
CUDA error: Unknown error in cuParamSetv(cuFilmConvert, offset, &d_buffer, sizeo
f(d_buffer))
CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.sample)
CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.resolution)

CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.x)
CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.y)
CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.w)
CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.h)
CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.offset)
CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.stride)
CUDA error: Unknown error in cuParamSetSize(cuFilmConvert, offset)

Windows Vista 64 bit
GTX 580 (tested drivers 301.42 and 306.97)%%%

%%%Same issue here. Crashes when trying to render with GPU in Viewport or F12 rendering. Tested on multiple Blenderversions 32 and 64bit. Console output: CUDA error: Unknown error in cuCtxSynchronize() CUDA error: Unknown error in cuGraphicsMapResources(1, &pmem.cuPBOresource, 0) CUDA error: Unknown error in cuGraphicsResourceGetMappedPointer(&buffer, &bytes, pmem.cuPBOresource) CUDA error: Unknown error in cuModuleGetFunction(&cuFilmConvert, cuModule, "kern el_cuda_tonemap") CUDA error: Unknown error in cuParamSetv(cuFilmConvert, offset, &d_rgba, sizeof( d_rgba)) CUDA error: Unknown error in cuParamSetv(cuFilmConvert, offset, &d_buffer, sizeo f(d_buffer)) CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.sample) CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.resolution) CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.x) CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.y) CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.w) CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.h) CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.offset) CUDA error: Unknown error in cuParamSeti(cuFilmConvert, offset, task.stride) CUDA error: Unknown error in cuParamSetSize(cuFilmConvert, offset) Windows Vista 64 bit GTX 580 (tested drivers 301.42 and 306.97)%%%

%%%Looks like a sm_20 only issue atm, assigning to Brecht. %%%

%%%Looks like a sm_20 only issue atm, assigning to Brecht. %%%

%%%Same here. It was after Revision: 51384 I think.

For me it crashed while loading the cuda kernel first. Now on every render.

XUbuntu 10.04 64bit.

OpenGL


renderer: 'GeForce GTX 460/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.2.0 NVIDIA 295.53'%%%

%%%Same here. It was after Revision: 51384 I think. For me it crashed while loading the cuda kernel first. Now on every render. XUbuntu 10.04 64bit. OpenGL **** renderer: 'GeForce GTX 460/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.2.0 NVIDIA 295.53'%%%

%%%Been trying to fix this all day, but no luck yet. I did do a commit now where it hopefully runs again, but there will be no motion blur on sm 2.0 still.%%%

%%%Been trying to fix this all day, but no luck yet. I did do a commit now where it hopefully runs again, but there will be no motion blur on sm 2.0 still.%%%
Author

%%%thanks brecht for following it.
Just tried the ALB build v51395 from graphicall and it works, with object motion blur (!!) on my 2 x gtx580 workstation: and it is fastest than i expected:
As usual, congrats for your impressive job !

%%%

%%%thanks brecht for following it. Just tried the ALB build v51395 from graphicall and it works, with object motion blur (!!) on my 2 x gtx580 workstation: and it is fastest than i expected: As usual, congrats for your impressive job ! %%%
Author

%%%Just tried the ALB build v51395 with my notebook, CUDA and GTX525M drivers 306.23 : it crashes...%%%

%%%Just tried the ALB build v51395 with my notebook, CUDA and GTX525M drivers 306.23 : it crashes...%%%

%%%last svn
ubuntu 12.04 64.
3GB NVIDIA GeForce GT 555M

exact same output as Falk Müller:
CUDA error: Launch failed in cuCtxSynchronize()
CUDA error: Launch failed in cuGraphicsMapResources(1, &pmem.cuPBOresource, 0)
CUDA error: Launch failed in cuGraphicsResourceGetMappedPointer(&buffer, &bytes, pmem.cuPBOresource)
CUDA error: Launch failed in cuModuleGetFunction(&cuFilmConvert, cuModule, "kernel_cuda_tonemap")
CUDA error: Launch failed in cuParamSetv(cuFilmConvert, offset, &d_rgba, sizeof(d_rgba))
CUDA error: Launch failed in cuParamSetv(cuFilmConvert, offset, &d_buffer, sizeof(d_buffer))
CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.sample)
CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.resolution)
CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.x)
CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.y)
CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.w)
CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.h)
CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.offset)
CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.stride)
CUDA error: Launch failed in cuParamSetSize(cuFilmConvert, offset)%%%

%%%last svn ubuntu 12.04 64. 3GB NVIDIA GeForce GT 555M exact same output as Falk Müller: CUDA error: Launch failed in cuCtxSynchronize() CUDA error: Launch failed in cuGraphicsMapResources(1, &pmem.cuPBOresource, 0) CUDA error: Launch failed in cuGraphicsResourceGetMappedPointer(&buffer, &bytes, pmem.cuPBOresource) CUDA error: Launch failed in cuModuleGetFunction(&cuFilmConvert, cuModule, "kernel_cuda_tonemap") CUDA error: Launch failed in cuParamSetv(cuFilmConvert, offset, &d_rgba, sizeof(d_rgba)) CUDA error: Launch failed in cuParamSetv(cuFilmConvert, offset, &d_buffer, sizeof(d_buffer)) CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.sample) CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.resolution) CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.x) CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.y) CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.w) CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.h) CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.offset) CUDA error: Launch failed in cuParamSeti(cuFilmConvert, offset, task.stride) CUDA error: Launch failed in cuParamSetSize(cuFilmConvert, offset)%%%

%%%I did some more fixes, did not check for the right cuda version. Still can't get motion blur to work on this card myself, it might need cuda 5.0, will keep trying.%%%

%%%I did some more fixes, did not check for the right cuda version. Still can't get motion blur to work on this card myself, it might need cuda 5.0, will keep trying.%%%

%%%Brecht, I'm adding the error here 'cause I think it may be related, by involving the nvcuda.dll
He did'nt say what was going on when the crash happened.

Reported from Elias79 on my graphicall build = Win7.x64 r51396
"Also crashes :(

Problem signature:
Problem Event Name: APPCRASH
Application Name: blender.exe
Application Version: 2.6.4.0
Application Timestamp: 507ffa90
Fault Module Name: nvcuda.dll
Fault Module Version: 8.17.13.142
Fault Module Timestamp: 4fb2030d
Exception Code: c0000005
Exception Offset: 000000000004844e
OS Version: 6.1.7601.2.1.0.256.4
Locale ID: 1033
Additional Information 1: d2e2
Additional Information 2: d2e2945599f2f26d3701df484995b6f0
Additional Information 3: ce90
Additional Information 4: ce90a776de2e531e2b65cf015cd77fb0

Read our privacy statement online:
http://go.microsoft.com/fwlink/?linkid=104288&clcid=0x0409

If the online privacy statement is not available, please read our privacy statement offline:
C:\Windows\system32\en-US\erofflps.txt "
Cheers,
~Tung%%%

%%%Brecht, I'm adding the error here 'cause I think it may be related, by involving the nvcuda.dll He did'nt say what was going on when the crash happened. Reported from Elias79 on my graphicall build = Win7.x64 r51396 "Also crashes :( Problem signature: Problem Event Name: APPCRASH Application Name: blender.exe Application Version: 2.6.4.0 Application Timestamp: 507ffa90 Fault Module Name: nvcuda.dll Fault Module Version: 8.17.13.142 Fault Module Timestamp: 4fb2030d Exception Code: c0000005 Exception Offset: 000000000004844e OS Version: 6.1.7601.2.1.0.256.4 Locale ID: 1033 Additional Information 1: d2e2 Additional Information 2: d2e2945599f2f26d3701df484995b6f0 Additional Information 3: ce90 Additional Information 4: ce90a776de2e531e2b65cf015cd77fb0 Read our privacy statement online: http://go.microsoft.com/fwlink/?linkid=104288&clcid=0x0409 If the online privacy statement is not available, please read our privacy statement offline: C:\Windows\system32\en-US\erofflps.txt " Cheers, ~Tung%%%
Author

%%%for info, the motion blur was working very well on the 51395 build, but is not active on the 51407 version of graphicall ( but no crash of cycles ).
Still talking about CUDA GPU rendering with 2 x GTX580%%%

%%%for info, the motion blur was working very well on the 51395 build, but is not active on the 51407 version of graphicall ( but no crash of cycles ). Still talking about CUDA GPU rendering with 2 x GTX580%%%

%%%Confirmed, motionblur on GPU is working with the ALB build v51395 from graphicall. That's the only version that works with MB and GPU on my system.

Windows Vista 64 bit
GTX 580 (driver 306.97)%%%

%%%Confirmed, motionblur on GPU is working with the ALB build v51395 from graphicall. That's the only version that works with MB and GPU on my system. Windows Vista 64 bit GTX 580 (driver 306.97)%%%

%%%Yes, I disabled motion blur on sm 2.0 for now. It works with CUDA 5.0 (after enabling it in the code), maybe that's the cuda version that graphicall build is using. Not sure yet I want to make 5.0 a requirement, or if I can find a solution to make it work with 4.2.%%%

%%%Yes, I disabled motion blur on sm 2.0 for now. It works with CUDA 5.0 (after enabling it in the code), maybe that's the cuda version that graphicall build is using. Not sure yet I want to make 5.0 a requirement, or if I can find a solution to make it work with 4.2.%%%
Author

%%%trieied teh last alb-version of graphicall (51411) and motion blur is disabled too...%%%

%%%trieied teh last alb-version of graphicall (51411) and motion blur is disabled too...%%%

%%%Blender does not crash anymore on me but now I get artifacts when turning on motion blur: https://dl.dropbox.com/u/675429/motionblurbug.jpg
The shader looks weird, too. Same image with motion blur turned off: https://dl.dropbox.com/u/675429/motionblurbug_nomoblur.jpg %%%

%%%Blender does not crash anymore on me but now I get artifacts when turning on motion blur: https://dl.dropbox.com/u/675429/motionblurbug.jpg The shader looks weird, too. Same image with motion blur turned off: https://dl.dropbox.com/u/675429/motionblurbug_nomoblur.jpg %%%

%%%Sorry, I forgot to mention the build: r51444
r51396 works perfectly fine btw. No artifacts and motion blur looks the way it is supposed to.%%%

%%%Sorry, I forgot to mention the build: r51444 r51396 works perfectly fine btw. No artifacts and motion blur looks the way it is supposed to.%%%

%%%Closed duplicate report [#33058] No object motion blur with GPU%%%

%%%Closed duplicate report [#33058] No object motion blur with GPU%%%

%%%Fix in svn, thanks all for the testing and reports.%%%

%%%Fix in svn, thanks all for the testing and reports.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32900
No description provided.