More fixes related to #32900, motion blur with cuda sm 2.0 still disabled.