intern/cycles/kernel/kernel_bvh.h
@@ -443,13 +443,19 @@ __device_inline bool bvh_intersect_motion(KernelGlobals *kg, const Ray *ray, con
 
 __device_inline bool scene_intersect(KernelGlobals *kg, const Ray *ray, const uint visibility, Intersection *isect)
 {
-	/* todo: fix cuda sm 2.0 motion blur */
-#if defined(__OBJECT_MOTION__) && (!defined(__KERNEL_CUDA) || (__CUDA_ARCH__ >= 210))
+#ifdef __OBJECT_MOTION__
+#if !defined(__KERNEL_CUDA__) || (__CUDA_ARCH__ >= 210)
 	if(kernel_data.bvh.have_motion)
 		return bvh_intersect_motion(kg, ray, visibility, isect);
 	else
-#endif
 		return bvh_intersect(kg, ray, visibility, isect);
+#else
+	/* todo: fix cuda sm 2.0 motion blur */
+	return bvh_intersect(kg, ray, visibility, isect);
+#endif
+#else
+	return bvh_intersect(kg, ray, visibility, isect);
+#endif
 }
 
 __device_inline float3 ray_offset(float3 P, float3 Ng)
