intern/cycles/kernel/kernel_emission.h
@@ -32,6 +32,10 @@ __device float3 direct_emissive_eval(KernelGlobals *kg, float rando,
 		Ray ray;
 		ray.D = ls->D;
 		ray.P = ls->P;
+		ray.t = 1.0f;
+#ifdef __OBJECT_MOTION__
+		ray.time = time;
+#endif
 		ray.dP.dx = make_float3(0.0f, 0.0f, 0.0f);
 		ray.dP.dy = make_float3(0.0f, 0.0f, 0.0f);
 #ifdef __CAMERA_MOTION__
